<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".MainActivity">
    <TextView
        android:text="@string/watch_out"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/toggle_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/logIn"
                    android:text="@string/log_in"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:background="@drawable/toggled_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/signUp"
                    android:text="@string/sign_up"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/pinkColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/logInLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/user_name"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button_a"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:id="@+id/username"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button_a"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textSize="13sp"
                    android:text="@string/forget_password"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/logIn_btn"
                    android:text="@string/log_in"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/Button_b"
                    app:backgroundTint="@color/pinkColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/singUpLayout"
            android:background="@color/white"
            android:padding="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/first_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button_a"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:id="@+id/first_name"
                    android:ems="10"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/last_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button_a"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:id="@+id/last_name"
                    android:ems="10"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
                android:hint="@string/choose_username"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button_a"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:id="@+id/new_username"
                    android:ems="10"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/choose_password"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button_a"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/new_password"
                    android:ems="10"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/password_confirmation"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button_a"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/passwords01"
                    android:ems="10"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>